Update plugin version, Remove FileDrop and StringUtils by update implementation